# OreCart-Hardware

./: .gitignore  .gitmodules  CMakeLists.txt  Kconfig  LICENSE  README.md  SETUP.md  main.c  prj.conf  prj.posix.conf  sparkfun_thing_plus_nrf9160.overlay  west.yml
build_1/zephyr/: .cmake.dotconfig.checksum  .config  cmake_install.cmake  dev_handles.c  edt.pickle  linker_zephyr_pre0.cmd  linker_zephyr_pre0.cmd.dep  linker_zephyr_pre1.cmd  linker_zephyr_pre1.cmd.dep  snippets_generated.cmake  zephyr.dts.d  zephyr.dts.pre  zephyr.lst  zephyr.map  zephyr.stat  zephyr_pre0.elf  zephyr_pre0.map
build_1/zephyr/arch/: cmake_install.cmake
build_1/zephyr/arch/common/: cmake_install.cmake
build_1/zephyr/boards/: cmake_install.cmake
build_1/zephyr/cmake/flash/: cmake_install.cmake
build_1/zephyr/cmake/reports/: cmake_install.cmake
build_1/zephyr/cmake/usage/: cmake_install.cmake
build_1/zephyr/drivers/: cmake_install.cmake
build_1/zephyr/drivers/console/: cmake_install.cmake
build_1/zephyr/drivers/disk/: cmake_install.cmake
build_1/zephyr/drivers/entropy/: cmake_install.cmake
build_1/zephyr/drivers/ethernet/: cmake_install.cmake
build_1/zephyr/drivers/interrupt_controller/: cmake_install.cmake
build_1/zephyr/drivers/misc/: cmake_install.cmake
build_1/zephyr/drivers/pcie/: cmake_install.cmake
build_1/zephyr/drivers/timer/: cmake_install.cmake
build_1/zephyr/drivers/usb/: cmake_install.cmake
build_1/zephyr/drivers/usb_c/: cmake_install.cmake
build_1/zephyr/kconfig/: sources.txt
build_1/zephyr/kernel/: cmake_install.cmake
build_1/zephyr/lib/: cmake_install.cmake
build_1/zephyr/subsys/: cmake_install.cmake
kernel/: FreeRTOSConfig.h
kernel-overlay/: README.md
res/cert/: HardwarePrivateKey.pem  HardwarePublicKey.pem  Ore.pem  README.md  ServerPublic.pem  cont.der  ore.der  server.der
src/: main.c  main.cpp  ssl_test_lib.h
src/common/: font.h  location.h  logging.cpp  logging.h  tools.cpp  tools.h  van_info.h
src/modules/: modem_module.c
src/modules/display_module/: display_module.h  display_test.cpp
src/modules/net_module/: net_module.c  net_module.cpp  net_module.h  net_scheduler.c  net_scheduler.cpp  net_scheduler.h  nrf9160_setup.c  nrf9160_setup.cpp  nrf9160_setup.h  socket.c  socket.cpp  socket.h
src/modules/server_module/: net_tools.c  net_tools.h  nrf9160_setup.c  nrf9160_setup.h  server_module.c  server_module.h  socket.c  socket.h
src/modules/tracking_module/: tracking_event.h  tracking_exception.h  tracking_module.c  tracking_module.cpp  tracking_module.h
tools/: character_generator.py
(+38 files in other folders)
